--- a/style/styles.css
+++ b/style/styles.css
@@ -58,15 +58,11 @@ header {
   font-style: normal;
   font-weight: bold;
   font-size: 26px;
+  letter-spacing: 0.03em;
 }
 
 .logo-web {
   color: var(--selection-text-color);
-
-  font-family: Raleway;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 26px;
 }
 
 .conteiner .list .selection {
@@ -96,6 +92,7 @@ header {
   font-style: normal;
   font-weight: 500;
   font-size: 14px;
+  letter-spacing: 0.02em;
 }
 
 .site-nav .link:hover,
@@ -111,17 +108,19 @@ header {
 }
 
 .contacts .item.item:not(:last-child) {
-  margin-right: 50px;
+  margin-right: 30px;
 }
 
 .page-header .contacts .link {
-  display: block;
+  display: flex;
+  align-items: center;
   padding: 32px 0px;
 
   color: var(--primary-text-color);
 
   font-style: normal;
   font-weight: 500;
+  letter-spacing: 0.02em;
 }
 
 .contacts .link:hover,
@@ -129,15 +128,44 @@ header {
   color: var(--selection-text-color);
 }
 
+.icon-phone {
+  margin-right: 10px;
+
+  fill: var(--primary-text-color);
+}
+
+.icon-email {
+  margin-right: 10px;
+
+  fill: var(--primary-text-color);
+}
+
+.email:hover .icon-email,
+.contacts .link:focus .icon-email {
+  fill: var(--selection-text-color);
+}
+
+.phone:hover .icon-phone,
+.contacts .link:focus .icon-phone {
+  fill: var(--selection-text-color);
+}
+
 /* ------ секция герой (студия) ----- */
 
 .hero {
   margin-bottom: 94px;
-  padding-bottom: 280px;
+  min-height: 600px;
   text-align: center;
 
   color: var(--white);
   background-color: var(--backgraund-color-1);
+  background-image: linear-gradient(
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../image/backgraund.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
 
   font-style: normal;
   font-weight: 900;
@@ -198,6 +226,35 @@ header {
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
+}
+
+.features .item::before {
+  display: block;
+  content: '';
+  margin-bottom: 30px;
+  height: 120px;
+  border-radius: 4px;
+
+  background-color: var(--backgraung-color-2);
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  background-size: 70px;
+}
+
+.features .item:nth-child(1)::before {
+  background-image: url(../image/antenna.svg);
+}
+
+.features .item:nth-child(2)::before {
+  background-image: url(../image/clock.svg);
+}
+
+.features .item:nth-child(3)::before {
+  background-image: url(../image/astronaut.svg);
+}
+
+.features .item:nth-child(4)::before {
+  background-image: url(../image/diagram.svg);
 }
 
 /* -----Чем мы занимаемся (студия)----- */
@@ -286,12 +343,102 @@ header {
 .our-team .item .position {
   margin: 0;
   margin-top: 10px;
-  padding-bottom: 30px;
+  margin-bottom: 16px;
   text-align: center;
 
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
+}
+
+/* social networks */
+
+.our-team .social-networks {
+  display: flex;
+  padding: 0;
+  margin: 0;
+  margin-left: 30px;
+  margin-bottom: 30px;
+}
+
+.social-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  margin: 0;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+}
+
+.social-networks .icon:not(:last-child) {
+  margin-right: 10px;
+}
+
+.social-link:hover,
+.social-link:focus {
+  background-color: var(--selection-text-color);
+}
+
+.social-icon {
+  display: flex;
+  align-items: center;
+
+  fill: #afb1b8;
+}
+
+.social-link:hover .social-icon,
+.social-link:focus .social-icon {
+  fill: var(--white);
+}
+
+/* ------Clients------- */
+
+.our-clients {
+  padding: 94px 0px;
+}
+
+.our-clients .title {
+  margin: 0;
+  margin-bottom: 50px;
+  text-align: center;
+
+  color: var(--title-text-color);
+
+  font-style: normal;
+  font-weight: bold;
+  font-size: 36px;
+}
+
+.client {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  margin: 0;
+  width: 170px;
+  height: 90px;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+}
+
+.our-clients .item:not(:last-child) {
+  margin-right: 30px;
+}
+
+.client .icon {
+  fill: #afb1b8;
+}
+
+.client:hover,
+.client:focus {
+  border-color: var(--selection-text-color);
+}
+
+.client:hover .icon,
+.client:focus .icon {
+  fill: var(--selection-text-color);
 }
 
 /* --------Подвал-------- */
@@ -341,6 +488,39 @@ footer {
   color: var(--selection-text-color);
 }
 
+footer .join-in {
+  padding: 0;
+  margin: 0;
+  margin-left: 70px;
+
+  color: var(--white);
+
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+}
+
+footer .join-in .social-networks {
+  display: flex;
+  margin-right: 0;
+  padding: 0;
+}
+
+.join-in .social-icon {
+  fill: var(--white);
+}
+
+.join-in .social-link {
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+.join-in .social-link:hover,
+.join-in .social-link:focus {
+  background-color: var(--selection-text-color);
+}
+
 /* -----Кнопки сортировки проектов (портфолио)----- */
 
 .our-projects {
@@ -365,6 +545,8 @@ footer {
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
+  line-height: 26px;
+  letter-spacing: 0.03em;
 }
 
 .sort-btn .item:not(:last-child) {
@@ -397,8 +579,13 @@ footer {
   display: block;
   margin-right: 30px;
   margin-bottom: 30px;
-  width: 370px;
+  max-width: 370px;
   border: 1px solid #eeeeee;
+}
+
+.projects .item:hover {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .item:nth-child(3n) {
@@ -407,10 +594,6 @@ footer {
 
 .projects .item:nth-last-child(-n + 3) {
   margin-bottom: 0;
-}
-
-.projects .item img {
-  margin-bottom: 20px;
 }
 
 .projects .title {
