--- a/style/styles.css
+++ b/style/styles.css
@@ -361,7 +361,7 @@ header {
 
 .our-team .social-networks {
   display: flex;
-  justify-content: ;
+  justify-content: center;
   padding: 0;
   margin: 0;
   margin-bottom: 30px;
